--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Joe | Expert sources from Gregory FCA</title>
+    <title>SourceOn | Expert sources from Gregory FCA</title>
   </head>
   <body>
     <noscript>Expert sources from Gregory FCA</noscript>
